<resources>
    <string name="app_name">My Application</string>
    <string name="c">C</string>
    <string name="plus_min">+/-</string>
    <string name="_0">0</string>
    <string name="name_percent">%</string>
    <string name="name_divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="name_multiply">*</string>
    <string name="name_minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="name_min">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="name_plus">+</string>
    <string name="name_raz">,</string>
    <string name="name_eq">=</string>
</resources>