<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/math_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:text="@string/_0"
            android:layout_marginEnd="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337"
            tools:layout_editor_absoluteX="7dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="4"
            android:rowCount="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/math_operation"
            tools:layout_editor_absoluteX="7dp">

                <Button
                    android:id="@+id/button"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/c"
                    android:textColor="@color/plusoperand_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/plus_min"
                    android:textColor="@color/plusoperand_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/name_percent"
                    android:textColor="@color/plusoperand_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_plus_btn"
                    android:text="@string/name_divide"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button4"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_7"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_8"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button6"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/button7"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_plus_btn"
                    android:text="@string/name_multiply"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_4"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button9"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_5"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button10"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_6"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button11"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_plus_btn"
                    android:text="@string/name_min"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button12"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_1"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button13"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_2"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button14"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_3"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button15"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_plus_btn"
                    android:text="@string/name_plus"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="162dp"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/button17"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_num"
                    android:text="@string/name_raz"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button18"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="5sp"
                    android:background="@drawable/custom_plus_btn"
                    android:text="@string/name_eq"
                    android:textColor="@color/operand_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

        </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>